src/objects/Related_Rep_Info__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Related Reps Info</relationshipLabel>
        <relationshipName>Related_Reps_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Rep_1_Actual_Cost__c</fullName>
        <formula>Campaign__r.Cost_Summary__c  *  Related_Rep_1_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Rep Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Rep_1_Cost__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Related Rep Actual Cost %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Related_Rep_B_Cost__c</fullName>
        <formula>Related_Rep_Budgeted_Cost__c * Campaign__r.Budgeted_Cost_Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Rep Budgeted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Rep_Budgeted_Cost__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Related Rep Budgeted Cost %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Related_Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Rep Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Related_Reps_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Rep Info</label>
    <nameField>
        <displayFormat>RRI-{000000}</displayFormat>
        <label>Related Rep Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Reps Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>